--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,7 +15,7 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "点亮火焰",
+  "eat-kano": "点亮焰",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
   "game-title": "菠萝队长",
