--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,12 +15,12 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "点亮焰",
+  "eat-kano": "“文明”",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "菠萝队长",
+  "game-title": "神威无敌大队长",
   "game-intro1": "从最底下的开始",
-  "game-intro2": "帮助菠萝队长点亮手中的火焰",
+  "game-intro2": "帮助神威无敌大队长点掉中指",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
